tests/e2e/semantics/nested_types6.error
Error: syntax error in story at line 2, column 12

2|        return [0]
                 ^^^

E0102: `List[int]` can't be implicitly converted to expected return type `List[List[int]]`.
