tests/e2e/semantics/nested_types6.story
function foo returns List[List[int]]
    return [0]

a = foo()
